--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ target/
 .idea/compiler.xml
 .idea/libraries/
 .idea/workspace.xml
+idea/workspace.xml
 *.iws
 *.iml
 *.ipr
@@ -39,4 +40,4 @@ build/
 .DS_Store
 .idea/workspace.xml
 *.xml
-.idea/workspace.xml
+idea/workspace.xml
